unpackaged/main/default/objects/Manual_Credit_Memo_Field_History__c/Manual_Credit_Memo_Field_History__c.object-meta.xml
<CustomObject>
    <label>Manual Credit Memo Field History</label>
    <nameField>
        <label>Manual Credit Memo Field History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manual Credit Memo Field Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>