unpackaged/main/default/objects/Manual_Credit_Memo_Field_History__c/fields/Change_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Change_Timestamp__c</fullName>
    <description>When the field change was made</description>
    <label>Change Timestamp</label>
    <type>DateTime</type>
</CustomField>