unpackaged/main/default/objects/Manual_Credit_Memo_Field_History__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who made the change</description>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Manual_Credit_Memo_Field_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>