unpackaged/main/default/objects/Manual_Credit_Memo_Field_History__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>API name of the field that changed</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>