unpackaged/main/default/objects/Manual_Credit_Memo_Field_History__c/fields/Manual_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Manual_Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Manual Credit Memo record</description>
    <label>Manual Credit Memo</label>
    <referenceTo>Manual_Credit_Memo__c</referenceTo>
    <relationshipLabel>Manual Credit Memo Field Histories</relationshipLabel>
    <relationshipName>Manual_Credit_Memo_Field_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>