unpackaged/main/default/objects/Manual_Credit_Memo_Field_History__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>Updated value of the field</description>
    <label>New Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>