unpackaged/main/default/objects/Manual_Credit_Memo_Field_History__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <description>Previous value of the field</description>
    <label>Old Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>